# rusty-seo

./: .gitignore  .report.html  Cargo.toml  README.md  RustySEO-Report.html  links.txt  main  notes.md  response.txt  seo_report.html  sitemap.xml  tut.rs
.rustyfrog/: API_KEY.json
rustyfrog/: report.html
rustyseo/: report.html
src/: crawlers.rs  libs.rs  main.rs  reports.rs
src/reports/utils/: loading.rs  mod.rs  pagespeed.rs
templates/: report.html  styles.css
