[package]
name = "rusty-frog"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13"
url = "2.2"
tokio = { version = "1", features = ["full"] }
select = "0.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.17"
google-pagespeedonline5 = "*"
hyper = "0.14"

[build]
build = "build.rs"
